# ETR-PEFT-Composition

./: .gitignore  .gitmodules  Makefile  NOTES.md  pyproject.toml  requirements.txt
ETR-Few-Shot-Evaluation/: .gitignore  Untitled.ipynb  Untitled1.ipynb  pyproject.toml  requirements.txt
ETR-Few-Shot-Evaluation/cookicutter/experimentation/: cookiecutter.json
ETR-Few-Shot-Evaluation/cookicutter/experimentation/{{ cookiecutter.model }}.{{ cookiecutter.method }}.{{ cookiecutter.dataset }}/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/data/etr-fr/hf_dataset/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
ETR-Few-Shot-Evaluation/experimentations/llama3-70b.zero_shot.etrfr/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/experimentations/llama3-8b.cot.etrfr/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/experimentations/llama3-8b.rag.etrfr/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/experimentations/llama3-8b.rag.etrfr+orangesum/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/experimentations/llama3-8b.rag.etrfr+orangesum+wikilarge/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/experimentations/llama3-8b.rag.etrfr+wikilarge/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/experimentations/llama3-8b.zero_shot.etrfr/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/experimentations/mistral-7b.cot.etrfr/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/experimentations/mistral-7b.rag.etrfr/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/experimentations/mistral-7b.rag.etrfr+orangesum/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/experimentations/mistral-7b.rag.etrfr+orangesum+wikilarge/: Makefile  run.py  slurm.sh
ETR-Few-Shot-Evaluation/experimentations/mistral-7b.rag.etrfr+wikilarge/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/experimentations/mistral-7b.zero_shot.etrfr/: run.py  slurm.sh
ETR-Few-Shot-Evaluation/index_embeddings/: etr_fr-test.index
ETR-Few-Shot-Evaluation/notebooks/: evaluate.ipynb
ETR-Few-Shot-Evaluation/scripts/: cache_datasets.py  cache_embedding_indexes.py
ETR-Few-Shot-Evaluation/src/etr_fr/: __init__.py  dataset.py  metrics.py
ETR-Few-Shot-Evaluation/src/icl/: backbones.py  cli.py  config.py  embedding_index.py  eval.py  hp_search.py  llm.py  models.py  prompt_manager.py  prompts.py  similarity_search.py  tuner.py
ETR-Few-Shot-Evaluation/tests/: test_eval.py  test_shot.py
cookicutter/experimentation/: cookiecutter.json
experimentations/deepseekr1.lora.etrfr/: run.py  slurm.sh
experimentations/deepseekr1.mtllora.etrfr+orangesum/: run.py  slurm.sh
experimentations/deepseekr1.mtllora.etrfr+orangesum+wikilarge/: run.py  slurm.sh
experimentations/deepseekr1.mtllora.etrfr+wikilarge/: run.py  slurm.sh
experimentations/llama3.lora.etrfr/: Makefile  run.py  (+1 more)
scripts/: cache_datasets.py  download_wikilarge_fr.sh
tests/: test_chat_template.py  test_config.py  test_datacollator.py  test_dataset.py  test_load_data.py  test_tuner.py  test_tuning_config.py  utils.py
(+175 files in other folders)
